# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_binary")
load("//build_defs:copy_to_directory.bzl", "copy_to_directory")
load("//build_defs:rules.bzl", "CLIENT_GAME_LINKOPTS", "DIST_VISIBILITY", "SERVER_GAME_LINKOPTS", "UI_LINKOPTS")
load("//third_party/content:metadata.bzl", "REPLACE_RULES")

cc_binary(
    name = "cgame.so",
    linkopts = CLIENT_GAME_LINKOPTS,
    linkshared = 1,
    visibility = DIST_VISIBILITY,
    deps = [
        "//build_defs:exported_symbols.lds",
        "//code/cgame:baseq3",
    ],
)

cc_binary(
    name = "qagame.so",
    linkopts = SERVER_GAME_LINKOPTS,
    linkshared = 1,
    visibility = DIST_VISIBILITY,
    deps = [
        "//build_defs:exported_symbols.lds",
        "//code/game:baseq3",
    ],
)

cc_binary(
    name = "ui.so",
    linkopts = UI_LINKOPTS,
    linkshared = 1,
    visibility = DIST_VISIBILITY,
    deps = [
        "//build_defs:exported_symbols.lds",
        "//code/q3_ui:ui",
        "//code/ui:ui_syscalls",
    ],
)

copy_to_directory(
    name = "baseq3",
    asset_srcs = [
        "//content/baseq3:materials",
        "//content/baseq3:skin_assets",
        "@QuakeArenaArcade_baseq3//:files",
        "@QuakeArenaArcade_baseq3//:png_files",
        "@pak9hqq36//:files",
        "@pak9hqq36//:png_files",
        "@q3a_baseq3_pak0//:files",
        "@q3a_baseq3_pak0//:png_files",
        "@q3a_baseq3_pak2//:files",
        "@q3a_baseq3_pak2//:png_files",
        "@q3a_baseq3_pak4//:files",
        "@q3a_baseq3_pak4//:png_files",
        "@q3a_baseq3_pak5//:files",
        "@q3a_baseq3_pak6//:files",
        "@q3a_baseq3_pak6//:png_files",
        "@q3a_baseq3_pak8//:files",
    ],
    downcase = True,
    replace_prefixes = REPLACE_RULES,
)

genrule(
    name = "pak0",
    srcs = [":baseq3"],
    outs = ["pak0.pk3"],
    cmd = """
export ZIPPER=`pwd`/$(execpath @bazel_tools//tools/zip:zipper)
export TARGET=`pwd`/$@
cd $(execpath :baseq3)
find .  ! -type d |  sed -e "s/^\\.\\///" | awk '{print "\\"" $$0 "\\"" }' | sort | xargs $${ZIPPER} c $${TARGET}
    """,
    tools = ["@bazel_tools//tools/zip:zipper"],
    visibility = DIST_VISIBILITY,
)
