genrule(
    name = "pak0",
    srcs = [
        "@q3a_missionpack_pak0//:files",
        "@q3a_missionpack_pak1//:files",
        "@q3a_missionpack_pak3//:files",
        "//content/teamarena:ui_assets",
        "@QuakeArenaArcade_missionpack//:files",
    ],
    outs = ["pak0.pk3"],
    cmd = """
rm -rf pak
$(location //build_defs:copy_files.sh) external/QuakeArenaArcade_missionpack/ pak $(locations @QuakeArenaArcade_missionpack//:files)
$(location //build_defs:copy_files.sh) external/q3a_missionpack_pak0/ pak $(locations @q3a_missionpack_pak0//:files)
$(location //build_defs:copy_files.sh) external/q3a_missionpack_pak1/ pak $(locations @q3a_missionpack_pak1//:files)
$(location //build_defs:copy_files.sh) external/q3a_missionpack_pak3/ pak $(locations @q3a_missionpack_pak3//:files)
$(location //build_defs:copy_files.sh) content/teamarena/ pak $(locations //content/teamarena:ui_assets)
cd pak
find .  ! -type d |  sed -e "s/^\\.\\///" | awk '{print "\\"" $$0 "\\"" }' | sort | xargs ../$(location @bazel_tools//tools/zip:zipper) c ../$@
    """,
    tools = [
        "//build_defs:copy_files.sh",
        "@bazel_tools//tools/zip:zipper",
    ],
)
