load("//build_defs:rules.bzl", "CLIENT_GAME_LINKOPTS", "DIST_VISIBILITY", "SERVER_GAME_LINKOPTS", "UI_LINKOPTS")
load("//build_defs:copy_to_directory.bzl", _copy_to_directory = "copy_to_directory")

cc_binary(
    name = "cgame.so",
    linkopts = CLIENT_GAME_LINKOPTS,
    linkshared = 1,
    visibility = DIST_VISIBILITY,
    deps = [
        "//build_defs:exported_symbols.lds",
        "//code/cgame:teamarena",
    ],
)

cc_binary(
    name = "qagame.so",
    linkopts = SERVER_GAME_LINKOPTS,
    linkshared = 1,
    visibility = DIST_VISIBILITY,
    deps = [
        "//build_defs:exported_symbols.lds",
        "//code/game:teamarena",
    ],
)

cc_binary(
    name = "ui.so",
    linkopts = UI_LINKOPTS,
    linkshared = 1,
    visibility = DIST_VISIBILITY,
    deps = [
        "//build_defs:exported_symbols.lds",
        "//code/ui",
    ],
)

_copy_to_directory(
    name = "teamarena",
    srcs = [
        "//content/teamarena:material_assets",
        "//content/teamarena:ui_assets",
        "@QuakeArenaArcade_teamarena//:files",
        "@QuakeArenaArcade_teamarena//:png_files",
        "@q3a_missionpack_pak0//:files",
        "@q3a_missionpack_pak0//:png_files",
        "@q3a_missionpack_pak1//:files",
    ],
    downcase = True,
)

genrule(
    name = "pak0",
    srcs = [":teamarena"],
    outs = ["pak0.pk3"],
    cmd = """
export ZIPPER=`pwd`/$(location @bazel_tools//tools/zip:zipper)
export TARGET=`pwd`/$@
cd $(location :teamarena)
find .  ! -type d |  sed -e "s/^\\.\\///" | awk '{print "\\"" $$0 "\\"" }' | sort | xargs $${ZIPPER} c $${TARGET}
    """,
    tools = ["@bazel_tools//tools/zip:zipper"],
    visibility = DIST_VISIBILITY,
)
