# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load(":glsl_to_c.bzl", "glsl_to_c")

glsl_to_c(name = "bokeh_fp")

glsl_to_c(name = "bokeh_vp")

glsl_to_c(name = "calclevels4x_fp")

glsl_to_c(name = "calclevels4x_vp")

glsl_to_c(name = "depthblur_fp")

glsl_to_c(name = "depthblur_vp")

glsl_to_c(name = "dlight_fp")

glsl_to_c(name = "dlight_vp")

glsl_to_c(name = "down4x_fp")

glsl_to_c(name = "down4x_vp")

glsl_to_c(name = "fogpass_fp")

glsl_to_c(name = "fogpass_vp")

glsl_to_c(name = "generic_fp")

glsl_to_c(name = "generic_vp")

glsl_to_c(name = "lightall_fp")

glsl_to_c(name = "lightall_vp")

glsl_to_c(name = "pshadow_fp")

glsl_to_c(name = "pshadow_vp")

glsl_to_c(name = "shadowfill_fp")

glsl_to_c(name = "shadowfill_vp")

glsl_to_c(name = "shadowmask_fp")

glsl_to_c(name = "shadowmask_vp")

glsl_to_c(name = "ssao_fp")

glsl_to_c(name = "ssao_vp")

glsl_to_c(name = "texturecolor_fp")

glsl_to_c(name = "texturecolor_vp")

glsl_to_c(name = "tonemap_fp")

glsl_to_c(name = "tonemap_vp")

cc_library(
    name = "glsl",
    visibility = ["//code/renderer:__pkg__"],
    deps = [
        ":bokeh_fp",
        ":bokeh_vp",
        ":calclevels4x_fp",
        ":calclevels4x_vp",
        ":depthblur_fp",
        ":depthblur_vp",
        ":dlight_fp",
        ":dlight_vp",
        ":down4x_fp",
        ":down4x_vp",
        ":fogpass_fp",
        ":fogpass_vp",
        ":generic_fp",
        ":generic_vp",
        ":lightall_fp",
        ":lightall_vp",
        ":pshadow_fp",
        ":pshadow_vp",
        ":shadowfill_fp",
        ":shadowfill_vp",
        ":shadowmask_fp",
        ":shadowmask_vp",
        ":ssao_fp",
        ":ssao_vp",
        ":texturecolor_fp",
        ":texturecolor_vp",
        ":tonemap_fp",
        ":tonemap_vp",
    ],
)

cc_binary(
    name = "stringify",
    srcs = ["stringify.c"],
)
